objects/FINS_Commission_Statement__c.object
<CustomObject>
    <description>Container for Direct Bill Commission Line Items</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Commission_Statements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accounting_Month__c</fullName>
        <label>Accounting Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Commission_Statements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_Number__c</fullName>
        <label>Check Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DifferenceStatement__c</fullName>
        <formula>TotalCommissionAmount__c  -  Statement_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Difference between Total Commission Amount and Statement Total</inlineHelpText>
        <label>DifferenceStatement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Statement_Date__c</fullName>
        <label>Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Statement_Total__c</fullName>
        <label>Statement Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Splits Calculated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalCommissionAmount__c</fullName>
        <description>Sum of all Account/contact commission records for the statement period</description>
        <inlineHelpText>Auto generated from &quot;Generate Commission Line Items&quot;</inlineHelpText>
        <label>Total Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Commission__c</fullName>
        <label>Total Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unique_Statement_ID__c</fullName>
        <description>Unique Statement ID</description>
        <displayFormat>{000000}</displayFormat>
        <label>Statement ID</label>
        <type>AutoNumber</type>
    </fields>
    <label>Commission Statement (Standard)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Commission Statement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>